--- a/src/main/webapp/resources/quotation/css/quotation.css
+++ b/src/main/webapp/resources/quotation/css/quotation.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+/* CSS Document */
 body {
     margin: 0;
     text-align: center;
@@ -15,7 +17,7 @@ td {
     padding: 0;
 }
 
-div, ul, input {
+div, ul, input, textarea {
     margin: 0;
     padding: 0;
     list-style: none;
